[package]
name = "slack-emoji-counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["json"] }
futures = "0.3"
tokio = { version = "1.15.0", features = ["full"] }
json = "0.12.4"
serde = { version = "1.0.133", features = ["derive"] }
